// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Bar down into tree 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          className="AppBarEG-root-1"
        >
          <header
            className="MuiPaper-root-11 MuiPaper-shadow4-17 MuiAppBar-root-4 MuiAppBar-positionStatic-7 MuiAppBar-colorPrimary-9"
          >
            <div
              className="MuiToolbar-root-38 MuiToolbar-gutters-39"
            >
              
              <h2
                className="MuiTypography-root-40 MuiTypography-title-46 MuiTypography-colorInherit-59 AppBarEG-flex-2"
                onClick={[Function]}
              >
                Artstre
              </h2>
              <button
                className="MuiButtonBase-root-78 MuiButton-root-64 MuiButton-flatContrast-69"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label-66"
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-80"
                />
              </button>
            </div>
          </header>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots App Bar root 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          className="AppBarEG-root-1"
        >
          <header
            className="MuiPaper-root-11 MuiPaper-shadow4-17 MuiAppBar-root-4 MuiAppBar-positionStatic-7 MuiAppBar-colorPrimary-9"
          >
            <div
              className="MuiToolbar-root-38 MuiToolbar-gutters-39"
            >
              
              <h2
                className="MuiTypography-root-40 MuiTypography-title-46 MuiTypography-colorInherit-59 AppBarEG-flex-2"
                onClick={[Function]}
              >
                Artstre
              </h2>
              <button
                className="MuiButtonBase-root-78 MuiButton-root-64 MuiButton-flatContrast-69"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label-66"
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-80"
                />
              </button>
            </div>
          </header>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map environment filtered alt 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    0
    : range 
    0
    -
    20000
  </h3>
  <div
    id={0}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": "1552px",
          "width": "1237px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map environment filtered dekkfrøete <200m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    1281
    : range 
    0
    -
    200
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": "1552px",
          "width": "1237px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map environment filtered dekkfrøete >400m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    1281
    : range 
    400
    -
    20000
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": "1552px",
          "width": "1237px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map environment filtered fjellbjørk <600m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    138955
    : range 
    0
    -
    600
  </h3>
  <div
    id={138955}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": "1552px",
          "width": "1237px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map heatmap alt 1`] = `
<div
  id={0}
>
  <canvas
    id="map-canvas"
    style={
      Object {
        "height": "1552px",
        "width": "1237px",
      }
    }
  />
</div>
`;

exports[`Storyshots Map heatmap dekkfrøete 1`] = `
<div
  id={1281}
>
  <canvas
    id="map-canvas"
    style={
      Object {
        "height": "1552px",
        "width": "1237px",
      }
    }
  />
</div>
`;

exports[`Storyshots Map heatmap fjellbjørk 1`] = `
<div
  id={138955}
>
  <canvas
    id="map-canvas"
    style={
      Object {
        "height": "1552px",
        "width": "1237px",
      }
    }
  />
</div>
`;

exports[`Storyshots Map raw data on ramp alt 1`] = `
<div>
  <h3>
    Taxon #
    0
  </h3>
  <div
    id={0}
  >
    <canvas
      id="map-canvas"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map raw data on ramp dekkfrøete 1`] = `
<div>
  <h3>
    Taxon #
    1281
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map raw data on ramp fjellbjørk 1`] = `
<div>
  <h3>
    Taxon #
    138955
  </h3>
  <div
    id={138955}
  >
    <canvas
      id="map-canvas"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map scatterplot alt 1`] = `
<div>
  <h3>
    Taxon #
    0
  </h3>
  <div
    id={0}
  >
    <canvas
      id="map-canvas-scatter"
      style={
        Object {
          "height": "1552px",
          "width": "1237px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map scatterplot dekkfrøete 1`] = `
<div>
  <h3>
    Taxon #
    1281
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas-scatter"
      style={
        Object {
          "height": "1552px",
          "width": "1237px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map scatterplot fjellbjørk 1`] = `
<div>
  <h3>
    Taxon #
    138955
  </h3>
  <div
    id={138955}
  >
    <canvas
      id="map-canvas-scatter"
      style={
        Object {
          "height": "1552px",
          "width": "1237px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Taxon Card default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "backgroundColor": "#ffffff",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                     0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "Roboto, sans-serif",
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "zIndex": 1,
            }
          }
          title="Bildet symboliserer ikke nødvendigvis gjeldende art, men kan være eksempel på underart eller annen nærliggende art. "
        >
          <div
            style={
              Object {
                "paddingBottom": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "position": "relative",
                }
              }
            >
              <div
                style={
                  Object {
                    "muiPrepared": true,
                  }
                }
              >
                <img
                  alt=""
                  onError={[Function]}
                  src="http://nodeyoda.westeurope.cloudapp.azure.com/taxonPhoto/196.jpg"
                  style={
                    Object {
                      "maxWidth": "100%",
                      "minWidth": "100%",
                      "muiPrepared": true,
                      "verticalAlign": "top",
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "height": "100%",
                      "muiPrepared": true,
                      "position": "relative",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "background": "rgba(0, 0, 0, 0.54)",
                        "bottom": 0,
                        "left": 0,
                        "muiPrepared": true,
                        "paddingTop": 8,
                        "position": "absolute",
                        "right": 0,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "muiPrepared": true,
                          "padding": 16,
                          "position": "relative",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "rgba(255, 255, 255, 0.87)",
                            "display": "block",
                            "fontSize": 24,
                            "lineHeight": "36px",
                            "muiPrepared": true,
                          }
                        }
                      >
                        
                      </span>
                      <span
                        style={
                          Object {
                            "color": "rgba(255, 255, 255, 0.54)",
                            "display": "block",
                            "fontSize": 14,
                            "muiPrepared": true,
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Locations default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          className="MuiPaper-root-11 MuiPaper-shadow2-15 MuiPaper-rounded-12 TaxonLocations-card-88"
        >
          <div
            className="MuiCardContent-root-90"
          >
            <h2
              className="MuiTypography-root-40 MuiTypography-headline-45"
            >
              Utbredelse
            </h2>
            <p
              className="MuiTypography-root-40 MuiTypography-body1-49"
            >
              basert på observasjoner
            </p>
            <div
              className="MuiTabs-root-91"
            >
              <div
                className="MuiTabs-flexContainer-92"
              >
                <div
                  className="MuiTabs-scrollingContainer-93 MuiTabs-fixed-94"
                  onScroll={[Function]}
                  role="tablist"
                  style={
                    Object {
                      "marginBottom": 0,
                    }
                  }
                >
                  <div
                    className="MuiTabs-flexContainer-92"
                  >
                    <button
                      aria-selected={true}
                      className="MuiButtonBase-root-78 MuiTab-root-98 MuiTab-rootInherit-106 MuiTab-rootInheritSelected-107"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="tab"
                      style={undefined}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiTab-wrapper-110"
                      >
                        <div
                          className="MuiTab-labelContainer-111"
                        >
                          <span
                            className="MuiTab-label-112"
                          >
                            Heat map 1
                          </span>
                        </div>
                      </span>
                      <span
                        className="MuiTouchRipple-root-80"
                      />
                    </button>
                    <button
                      aria-selected={false}
                      className="MuiButtonBase-root-78 MuiTab-root-98 MuiTab-rootInherit-106"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="tab"
                      style={undefined}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiTab-wrapper-110"
                      >
                        <div
                          className="MuiTab-labelContainer-111"
                        >
                          <span
                            className="MuiTab-label-112"
                          >
                            Scatter plot
                          </span>
                        </div>
                      </span>
                      <span
                        className="MuiTouchRipple-root-80"
                      />
                    </button>
                    <button
                      aria-selected={false}
                      className="MuiButtonBase-root-78 MuiTab-root-98 MuiTab-rootInherit-106"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="tab"
                      style={undefined}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiTab-wrapper-110"
                      >
                        <div
                          className="MuiTab-labelContainer-111"
                        >
                          <span
                            className="MuiTab-label-112"
                          >
                            Heat map 2
                          </span>
                        </div>
                      </span>
                      <span
                        className="MuiTouchRipple-root-80"
                      />
                    </button>
                  </div>
                  <div
                    className="MuiTabIndicator-root-114 MuiTabIndicator-colorAccent-115"
                    style={
                      Object {
                        "left": 0,
                        "width": 0,
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiCardMedia-root-117 TaxonLocations-media-89"
            src={undefined}
            style={undefined}
            title="utbredelse"
          >
            <div>
              <div
                id={0}
              >
                <canvas
                  id="map-canvas-heatmap"
                  style={
                    Object {
                      "height": "1552px",
                      "width": "1237px",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Search default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "display": "inline-block",
              "muiPrepared": true,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundColor": "transparent",
                "cursor": "auto",
                "display": "inline-block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "height": 72,
                "lineHeight": "24px",
                "muiPrepared": true,
                "position": "relative",
                "transition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "width": "100%",
              }
            }
          >
            <label
              className={undefined}
              htmlFor="1"
              onClick={undefined}
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.3)",
                  "lineHeight": "22px",
                  "muiPrepared": true,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": 38,
                  "transform": "scale(1) translate(0, 0)",
                  "transformOrigin": "left top",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "zIndex": 1,
                }
              }
            >
              Søk på takson
            </label>
            <div
              style={
                Object {
                  "bottom": 12,
                  "color": "rgba(0, 0, 0, 0.3)",
                  "muiPrepared": true,
                  "opacity": 0,
                  "position": "absolute",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              Søk på vitenskapelig navn
            </div>
            <input
              autoComplete="off"
              autoFocus={true}
              disabled={false}
              id="1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              open={false}
              style={
                Object {
                  "WebkitOpacity": 1,
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "appearance": "textfield",
                  "backgroundColor": "rgba(0,0,0,0)",
                  "border": "none",
                  "boxSizing": "border-box",
                  "color": "rgba(0, 0, 0, 0.87)",
                  "cursor": "inherit",
                  "font": "inherit",
                  "height": "100%",
                  "marginTop": 14,
                  "muiPrepared": true,
                  "outline": "none",
                  "padding": 0,
                  "position": "relative",
                  "width": "100%",
                }
              }
              type="text"
              value=""
            />
            <div>
              <hr
                aria-hidden="true"
                style={
                  Object {
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": 1,
                    "borderColor": "#e0e0e0",
                    "borderLeft": "none",
                    "borderRight": "none",
                    "borderTop": "none",
                    "bottom": 8,
                    "boxSizing": "content-box",
                    "margin": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "width": "100%",
                  }
                }
              />
              <hr
                aria-hidden="true"
                style={
                  Object {
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": 2,
                    "borderColor": "#00bcd4",
                    "borderLeft": "none",
                    "borderRight": "none",
                    "borderTop": "none",
                    "bottom": 8,
                    "boxSizing": "content-box",
                    "margin": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "transform": "scaleX(0)",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
          <div
            style={
              Object {
                "display": "none",
              }
            }
          />
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Tree default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <ul
          className="MuiList-root-119 MuiList-padding-120"
        >
          <div
            className="MuiListItem-container-124"
          >
            <li
              className="MuiButtonBase-root-78 MuiListItem-root-123 MuiListItem-gutters-130 MuiListItem-button-131 MuiListItem-secondaryAction-132 MuiListItem-default-126"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiAvatar-root-133"
                onError={[Function]}
              >
                <img
                  alt={undefined}
                  className="MuiAvatar-img-135"
                  sizes={undefined}
                  src="http://nodeyoda.westeurope.cloudapp.azure.com/taxonPhoto/1045.jpg"
                  srcSet={undefined}
                />
              </div>
              <div
                className="MuiListItemText-root-136"
              >
                <h3
                  className="MuiTypography-root-40 MuiTypography-subheading-47 MuiListItemText-text-139"
                >
                  Agaricomycetes
                </h3>
              </div>
              <span
                className="MuiTouchRipple-root-80"
              />
            </li>
            <div
              className="MuiListItemSecondaryAction-root-141"
            >
              <div
                className="MuiChip-root-142"
                onClick={undefined}
                onKeyDown={[Function]}
                role="button"
                tabIndex={-1}
              >
                <span
                  className="MuiChip-label-147"
                >
                  494614
                </span>
              </div>
            </div>
          </div>
        </ul>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
